--- a/index.html
+++ b/index.html
@@ -24,12 +24,20 @@
 
 <body>
     <div class="container">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 header">
             <h1>Social Media Candy Shop</h1>
+            <div class="menu navbar">
+                <a href="#about">About us</a>
+                <a href="#fb-likes">Facebook Likes</a>
+                <a href="#ig-likes">Instagram Likes</a>
+                <a href="#ig-followers">Instagram Followers</a>
+                <a href="#contact">Contact Us</a>
+                <a href="#FAQ">FAQ</a>
+            </div>
         </div>
     </div>
 
-    <div class="container about-us">
+    <div class="container about-us" id="about">
         <h3>About us</h3>
         <p>
             We are a highly specialized team of monkeys that worked hard in our branch in order to manufacture and
@@ -41,137 +49,137 @@
         <br>
         <h3>Payment Options</h3>
         <p>
-            We accept a large variety of payment processors and currencies in our business.
+            We accept only crypto currencies as payment.
         </p>
         <br>
-        <br>
-        <h3>Valued Crypto-Currencies</h3>
-        <br>
         <div class="row centered">
-            <div class="col-xs-1 col-sm-2 col-md-4 col-lg-4 crypto-logos">
-                <img src="./assets/btc-logo.svg" alt="">
+            <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 crypto-logos">
+                <img src="./assets/btc-logo.svg" alt=""><br><br>
+                <h5>BITCOIN</h5>
             </div>
-            <div class="col-xs-1 col-sm-2 col-md-4 col-lg-4 crypto-logos">
-                <img src="./assets/litecoin-logo.png" alt="">
+            <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 crypto-logos">
+                <img src="./assets/litecoin-logo.png" alt=""><br><br>
+                <h5>LITECOIN</h5>
             </div>
-            <div class="col-xs-1 col-sm-2 col-md-4 col-lg-4 crypto-logos">
-                <img src="./assets/monero-logo.png" alt="">
+            <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 crypto-logos">
+                <img src="./assets/bch-logo.png" alt=""><br><br>
+                <h5>BITCOIN CASH</h5>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 crypto-logos">
+                <img src="./assets/eth-logo.png" style="width:175px;" alt=""><br><br>
+                <h5>ETHEREUM</h5>
             </div>
         </div>
-        <br>
-        <br>
-        <h3>Payment Processors</h3>
-        <br>
-        <div class="row centered">
-            <div class="col-xs-1 col-sm-2 col-md-4 col-lg-4 pay-logos">
-                <img src="./assets/pp-logo.png" alt="">
-            </div>
-            <div class="col-xs-1 col-sm-2 col-md-4 col-lg-4 pay-logos">
-                <img src="./assets/tw-logo.png" alt="">
-            </div>
-            <div class="col-xs-1 col-sm-2 col-md-4 col-lg-4 pay-logos">
-                <img src="./assets/wu-logo.svg" alt="">
-            </div>
-        </div>
-
     </div>
 
-    <div class="container facebook-packages">
-        <h1>Facebook Likes Shop</h1>
+    <div class="container facebook-packages" id="fb-likes">
+        <h1>Buy Facebook Likes</h1>
         <div class="row centered">
-            <div class="col-xs-1 col-sm-4 col-md-4 col-lg-4 text-center fb-article">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 text-center fb-article">
                 <h3>1K LIKES - 10$</h3>
                 <div class="like"><i class="fas fa-thumbs-up" style="color:#b87333;"></i></div>
-                <button class="btn btn-danger">ORDER BRONZE</button>
+                <a href="https://commerce.coinbase.com/checkout/5cca0589-4bca-44c4-a1ca-dd40ba5ecbc3" target="_blank"
+                    class="btn btn-danger" role="button">ORDER BRONZE</a>
             </div>
-            <div class="col-xs-1 col-sm-4 col-md-4 col-lg-4 text-center fb-article">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 text-center fb-article">
                 <h3>5K LIKES - 40$</h3>
                 <div class="like"><i class="fas fa-thumbs-up" style="color:silver"></i></div>
-                <button class="btn btn-danger">ORDER SILVER</button>
+                <a href="https://commerce.coinbase.com/checkout/444b3dec-ef99-4806-9410-737bcfdc3df4" target="_blank"
+                    class="btn btn-danger" role="button">ORDER SILVER</a>
             </div>
-            <div class="col-xs-1 col-sm-4 col-md-4 col-lg-4 text-center fb-article">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 text-center fb-article">
                 <h3>10K LIKES - 75$</h3>
                 <div class="like"><i class="fas fa-thumbs-up" style="color:gold"></i></div>
-                <button class="btn btn-danger">ORDER GOLD</button>
+                <a href="https://commerce.coinbase.com/checkout/df7f784e-9119-476c-bdf7-a53077eae73f" target="_blank"
+                    class="btn btn-danger" role="button">ORDER GOLD</a>
             </div>
         </div>
 
         <div class="row centered">
-            <div class="col-xs-1 col-sm-4 col-md-4 col-lg-4 text-center fb-article">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 text-center fb-article">
                 <h3>50K LIKES - 400$</h3>
                 <div class="like"><i class="fas fa-thumbs-up" style="color:#e5e4e2"></i></div>
-                <button class="btn btn-danger">ORDER PLATINUM</button>
+                <a href="https://commerce.coinbase.com/checkout/016684e9-9e89-490f-a452-cbf61ce4b4d9" target="_blank"
+                    class="btn btn-danger" role="button">ORDER PLATINUM</a>
             </div>
-            <div class="col-xs-1 col-sm-4 col-md-4 col-lg-4 text-center fb-article">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 text-center fb-article">
                 <h3>100K LIKES - 780$</h3>
                 <div class="like"><i class="fas fa-thumbs-up" style="color:#9b111e"></i></div>
-                <button class="btn btn-danger">ORDER RUBY</button>
+                <a href="https://commerce.coinbase.com/checkout/be4a8ba3-f534-4962-8ac2-6842c62b44a0" target="_blank"
+                    class="btn btn-danger" role="button">ORDER RUBY</a>
             </div>
-            <div class="col-xs-1 col-sm-4 col-md-4 col-lg-4 text-center fb-article">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 text-center fb-article">
                 <h3>150K LIKES - 999$</h3>
                 <div class="like"><i class="fas fa-thumbs-up" style="color:#b9f2ff"></i></div>
-                <button class="btn btn-danger">ORDER DIAMOND</button>
+                <a href="https://commerce.coinbase.com/checkout/f1829a2a-3490-47f3-8f13-5c1c6ceb1b4c" target="_blank"
+                    class="btn btn-danger" role="button">ORDER DIAMOND</a>
             </div>
         </div>
     </div>
     <div class="container empty-row">
         PLM
     </div>
-    <div class="container facebook-packages">
-        <h1>Instagram Likes Shop</h1>
+    <div class="container facebook-packages" id="ig-likes">
+        <h1>Buy Instagram Likes</h1>
         <div class="row centered">
-            <div class="col-xs-1 col-sm-4 col-md-4 col-lg-4 text-center fb-article">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 text-center fb-article">
                 <h3>1K LIKES - 10$</h3>
                 <div class="like"><i class="fas fa-thumbs-up" style="color:#b87333;"></i></div>
-                <button class="btn btn-danger">ORDER BRONZE</button>
+                <a href="https://commerce.coinbase.com/checkout/3e6fcbe8-d428-4869-b9f8-6c83ca0d53ab" target="_blank"
+                    class="btn btn-danger" role="button">ORDER BRONZE</a>
             </div>
-            <div class="col-xs-1 col-sm-4 col-md-4 col-lg-4 text-center fb-article">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 text-center fb-article">
                 <h3>5K LIKES - 40$</h3>
                 <div class="like"><i class="fas fa-thumbs-up" style="color:silver"></i></div>
-                <button class="btn btn-danger">ORDER SILVER</button>
+                <a href="https://commerce.coinbase.com/checkout/cc3fc143-4c8c-407f-997d-8173c61f89cf" target="_blank"
+                    class="btn btn-danger" role="button">ORDER SILVER</a>
             </div>
-            <div class="col-xs-1 col-sm-4 col-md-4 col-lg-4 text-center fb-article">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 text-center fb-article">
                 <h3>10K LIKES - 75$</h3>
                 <div class="like"><i class="fas fa-thumbs-up" style="color:gold"></i></div>
-                <button class="btn btn-danger">ORDER GOLD</button>
+                <a href="https://commerce.coinbase.com/checkout/003d8874-06b3-4bcc-a478-9c8c0b6af1a5" target="_blank"
+                    class="btn btn-danger" role="button">ORDER GOLD</a>
             </div>
         </div>
 
         <div class="row centered">
-            <div class="col-xs-1 col-sm-4 col-md-4 col-lg-4 text-center fb-article">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 text-center fb-article">
                 <h3>50K LIKES - 400$</h3>
                 <div class="like"><i class="fas fa-thumbs-up" style="color:#e5e4e2"></i></div>
-                <button class="btn btn-danger">ORDER PLATINUM</button>
+                <a href="https://commerce.coinbase.com/checkout/e68d5de0-624a-4542-94da-e229c02f47cc" target="_blank"
+                    class="btn btn-danger" role="button">ORDER PLATINUM</a>
             </div>
-            <div class="col-xs-1 col-sm-4 col-md-4 col-lg-4 text-center fb-article">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 text-center fb-article">
                 <h3>100K LIKES - 780$</h3>
                 <div class="like"><i class="fas fa-thumbs-up" style="color:#9b111e"></i></div>
-                <button class="btn btn-danger">ORDER RUBY</button>
+                <a href="https://commerce.coinbase.com/checkout/615e1c6b-8132-4e16-9838-b7af074a2c11" target="_blank"
+                    class="btn btn-danger" role="button">ORDER RUBY</a>
             </div>
-            <div class="col-xs-1 col-sm-4 col-md-4 col-lg-4 text-center fb-article">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 text-center fb-article">
                 <h3>150K LIKES - 999$</h3>
                 <div class="like"><i class="fas fa-thumbs-up" style="color:#b9f2ff"></i></div>
-                <button class="btn btn-danger">ORDER DIAMOND</button>
+                <a href="https://commerce.coinbase.com/checkout/85654165-e5c9-4e0f-ac81-5ca51747e682" target="_blank"
+                    class="btn btn-danger" role="button">ORDER DIAMOND</a>
             </div>
         </div>
     </div>
     <div class="container empty-row">
         PLM
     </div>
-    <div class="container facebook-packages">
-        <h1>Instagram Followers Shop</h1>
+    <div class="container facebook-packages" id="ig-followers">
+        <h1>Buy Instagram Followers</h1>
         <div class="row centered">
-            <div class="col-xs-1 col-sm-4 col-md-4 col-lg-4 text-center fb-article">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 text-center fb-article">
                 <h3>1K FOLLOWERS -25$</h3>
                 <div class="like"><i class="fas fa-users" style="color:#b87333;"></i></div>
                 <button class="btn btn-danger">ORDER BRONZE</button>
             </div>
-            <div class="col-xs-1 col-sm-4 col-md-4 col-lg-4 text-center fb-article">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 text-center fb-article">
                 <h3>5K FOLLOWERS - 100$</h3>
                 <div class="like"><i class="fas fa-users" style="color:silver;"></i></div>
                 <button class="btn btn-danger">ORDER SILVER</button>
             </div>
-            <div class="col-xs-1 col-sm-4 col-md-4 col-lg-4 text-center fb-article">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 text-center fb-article">
                 <h3>10K FOLLOWERS - 190$</h3>
                 <div class="like"><i class="fas fa-users" style="color:gold"></i></div>
                 <button class="btn btn-danger">ORDER GOLD</button>
@@ -179,20 +187,86 @@
         </div>
 
         <div class="row centered">
-            <div class="col-xs-1 col-sm-4 col-md-4 col-lg-4 text-center fb-article">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 text-center fb-article">
                 <h3>50K FOLLOWERS - 1900$</h3>
                 <div class="like"><i class="fas fa-users" style="color:#e5e4e2"></i></div>
                 <button class="btn btn-danger">ORDER PLATINUM</button>
             </div>
-            <div class="col-xs-1 col-sm-4 col-md-4 col-lg-4 text-center fb-article">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 text-center fb-article">
                 <h3>100K FOLLOWERS - 3500$</h3>
                 <div class="like"><i class="fas fa-users" style="color:#9b111e"></i></div>
                 <button class="btn btn-danger">ORDER RUBY</button>
             </div>
-            <div class="col-xs-1 col-sm-4 col-md-4 col-lg-4 text-center fb-article">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 text-center fb-article">
                 <h3>150K FOLLOWERS - 4500$</h3>
                 <div class="like"><i class="fas fa-users" style="color:#b9f2ff"></i></div>
                 <button class="btn btn-danger">ORDER DIAMOND</button>
+            </div>
+        </div>
+    </div>
+    <div class="container empty-row">
+        PLM
+    </div>
+    <div class="container facebook-packages" id="FAQ">
+        <h1>Frequently Asked Questions</h1>
+        <div class="row centered">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 text-center fb-article">
+                <h5>1. How fast will my order be delivered?</h5>
+                <p>
+                    Depending on the package you bought your order will be delivered in a timely manner as follows: <br>
+                    a. Packages BRONZE - GOLD are usually delivered within 72 hours.
+                    b. Packages PLATINUM - DIAMOND are delivered from 5 to 20 business days approximately depending on
+                    size.
+                    c. Custom packages - are subject to customer discussions and will be delivered according to the
+                    terms.
+                </p>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 text-center fb-article">
+                <h5>2. Payment Processors</h5>
+                <p>
+                    For the moment we deal only in crypto since it's the fastest and most secure way we can afford for
+                    our
+                    transactions. We do not support other types of transactions.
+                </p>
+            </div>
+        </div>
+        <div class="row centered">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 text-center fb-article">
+                <h5>3. Need custom orders?</h5>
+                <p>
+                    We do provide help with custom orders please contact us over e-mail or skype.
+                </p>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 text-center fb-article">
+                <h5>4. Refund Policy</h5>
+                <p>
+                    Upon submitting requested proof we will refund/reship bought items. Please keep track of your order
+                    number
+                    and mails exchanged with us. We do not refund without proof of purchase and proof of delivery from
+                    your
+                    side.
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="container empty-row">
+        PLM
+    </div>
+    <div class="container facebook-packages" id="contact">
+        <h1>Contact us</h1>
+        <div class="row centered">
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 text-center fb-article">
+                <h3>MAIL</h3>
+                <div class="like"><i class="fab fa-mailchimp"></i></div>
+                <div>smcandyshop@protonmail.com</div>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 text-center fb-article">
+                <i class="fas fa-comments" style="font-size:150px;"></i>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 text-center fb-article">
+                <h3>SKYPE</h3>
+                <div class="like"><i class="fab fa-skype"></i></div>
+                <div>smcandyshop@outlook.com</div>
             </div>
         </div>
     </div>
