landing page almost finished

--- a/index.html
+++ b/index.html
@@ -172,35 +172,41 @@
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 text-center fb-article">
                 <h3>1K FOLLOWERS -25$</h3>
                 <div class="like"><i class="fas fa-users" style="color:#b87333;"></i></div>
-                <button class="btn btn-danger">ORDER BRONZE</button>
+                <a href="https://commerce.coinbase.com/checkout/4c683b22-6a1e-4da1-a781-883837279c0e" target="_blank"
+                    class="btn btn-danger" role="button">ORDER BRONZE</a>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 text-center fb-article">
                 <h3>5K FOLLOWERS - 100$</h3>
                 <div class="like"><i class="fas fa-users" style="color:silver;"></i></div>
-                <button class="btn btn-danger">ORDER SILVER</button>
+                <a href="https://commerce.coinbase.com/checkout/6ace0c89-4c45-4b28-9f17-c69e9bb75b7d" target="_blank"
+                    class="btn btn-danger" role="button">ORDER SILVER</a>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 text-center fb-article">
                 <h3>10K FOLLOWERS - 190$</h3>
                 <div class="like"><i class="fas fa-users" style="color:gold"></i></div>
-                <button class="btn btn-danger">ORDER GOLD</button>
+                <a href="https://commerce.coinbase.com/checkout/44a0a4f8-2e48-48fd-a243-14f713c3f346" target="_blank"
+                    class="btn btn-danger" role="button">ORDER GOLD</a>
             </div>
         </div>
 
         <div class="row centered">
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 text-center fb-article">
-                <h3>50K FOLLOWERS - 1900$</h3>
+                <h3>50K FOLLOWERS - 950$</h3>
                 <div class="like"><i class="fas fa-users" style="color:#e5e4e2"></i></div>
-                <button class="btn btn-danger">ORDER PLATINUM</button>
+                <a href="https://commerce.coinbase.com/checkout/0533b0ab-16b3-41a4-a3e2-dbfd952ca64a" target="_blank"
+                    class="btn btn-danger" role="button">ORDER PLATINUM</a>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 text-center fb-article">
-                <h3>100K FOLLOWERS - 3500$</h3>
+                <h3>100K FOLLOWERS - 1800$</h3>
                 <div class="like"><i class="fas fa-users" style="color:#9b111e"></i></div>
-                <button class="btn btn-danger">ORDER RUBY</button>
+                <a href="https://commerce.coinbase.com/checkout/70e61166-ecc6-4d28-903f-913f2cbc60f8" target="_blank"
+                    class="btn btn-danger" role="button">ORDER RUBY</a>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 text-center fb-article">
-                <h3>150K FOLLOWERS - 4500$</h3>
+                <h3>150K FOLLOWERS - 3500$</h3>
                 <div class="like"><i class="fas fa-users" style="color:#b9f2ff"></i></div>
-                <button class="btn btn-danger">ORDER DIAMOND</button>
+                <a href="https://commerce.coinbase.com/checkout/d2b5df98-ba97-446b-b956-16838a0f68c2" target="_blank"
+                    class="btn btn-danger" role="button">ORDER DIAMOND</a>
             </div>
         </div>
     </div>
@@ -214,9 +220,9 @@
                 <h5>1. How fast will my order be delivered?</h5>
                 <p>
                     Depending on the package you bought your order will be delivered in a timely manner as follows: <br>
-                    a. Packages BRONZE - GOLD are usually delivered within 72 hours.
+                    a. Packages BRONZE - GOLD are usually delivered within 72 hours.<br>
                     b. Packages PLATINUM - DIAMOND are delivered from 5 to 20 business days approximately depending on
-                    size.
+                    size.<br>
                     c. Custom packages - are subject to customer discussions and will be delivered according to the
                     terms.
                 </p>
